--- a/msd_body.html
+++ b/msd_body.html
@@ -32,9 +32,9 @@
 <!-------------------------------------------------------->
 <tr>
     <td colspan="3">
-        はじめに
+        <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
-    <td colspan="3">Introduction</td>
+    <td colspan="3">Cell</td>
 </tr>
 <tr>
     <td></td>
@@ -73,275 +73,248 @@
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>卵子<rt>らんし</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>egg</td>
+    <td colspan="2">egg</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>精子<rt>せいし</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>sperm /spɜrm/</td>
+    <td colspan="2">sperm /spɜrm/</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>受精<rt>じゅせい</rt></ruby>
         <ruby>卵<rt>らん</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>fertilized egg</td>
+    <td colspan="2">fertilized egg</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>血液<rt>けつえき</rt></ruby>
         <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>blood cell</td>
+    <td colspan="2">blood cell</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>筋肉<rt>きんにく</rt></ruby>
         <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>muscle cell</td>
+    <td colspan="2">muscle cell</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>皮膚<rt>ひふ</rt></ruby>
         <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>skin cell</td>
+    <td colspan="2">skin cell</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>神経<rt>しんけい</rt></ruby>
         <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>nerve cell</td>
+    <td colspan="2">nerve cell</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>線<rt>せん</rt></ruby>
         <ruby>細胞<rt>さいぼう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>glandular cell /ˈglæn dʒə lər/</td>
+    <td colspan="2">glandular cell /ˈglæn dʒə lər/</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>微<rt>び</rt></ruby>
         <ruby>生物<rt>せいぶつ</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>microorganism</td>
+    <td colspan="2">microorganism</td>
 </tr>
 <tr>
     <td></td>
+    <td colspan="2">バクテリア</td>
     <td></td>
-    <td>バクテリア</td>
-    <td></td>
-    <td></td>
-    <td>bacteria</td>
+    <td colspan="2">bacteria</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>菌<rt>きん</rt></ruby>
         <ruby>類<rt>るい</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>fungus /ˈfʌŋ gəs/, fungi /ˈfʌn dʒaɪ/</td>
+    <td colspan="2">fungus /ˈfʌŋ gəs/, fungi /ˈfʌn dʒaɪ/</td>
 </tr>
 <tr>
     <td></td>
-    <td></td>
-    <td>
+    <td colspan="2">
         <ruby>常在<rt>じょうざい</rt></ruby>
         <ruby>菌<rt>きん</rt></ruby>
         <ruby>叢<rt>そう</rt></ruby>
     </td>
     <td></td>
-    <td></td>
-    <td>resident flora</td>
+    <td colspan="2">resident flora</td>
 </tr>
 <tr>
     <td></td>
+    <td colspan="2">マイクロバイオーム</td>
     <td></td>
-    <td>マイクロバイオーム</td>
-    <td></td>
-    <td></td>
-    <td>microbiome</td>
+    <td colspan="2">microbiome</td>
 </tr>
 <tr>
     <td></td>
+    <td colspan="2">ウィルス</td>
     <td></td>
-    <td>ウィルス</td>
-    <td></td>
-    <td></td>
-    <td>virus /ˈvaɪ rəs/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>細胞<rt>さいぼう</rt></ruby>
-        <ruby>膜<rt>まく</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>cell membrane</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>受容<rt>じゅよう</rt></ruby>
-        <ruby>体<rt>たい</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>receptor</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>インスリン</td>
-    <td></td>
-    <td></td>
-    <td>insulin /ˈɪn sə lɪn/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>グルコース</td>
-    <td></td>
-    <td></td>
-    <td>glucose /ˈglu koʊs/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>血糖<rt>けっとう</rt></ruby>
-        <ruby>値<rt>ち</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>blood sugar level</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>細胞<rt>さいぼう</rt></ruby>
-        <ruby>質<rt>しつ</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>cytoplasm /ˈsaɪ təˌplæz əm/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>細胞<rt>さいぼう</rt></ruby>
-        <ruby>核<rt>かく</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>nucleus /ˈnu kli əs/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>遺伝<rt>いでん</rt></ruby>
-        <ruby>物質<rt>ぶっしつ</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>genetic material</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>遺伝<rt>いでん</rt></ruby>
-        <ruby>子<rt>し</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>gene /dʒin/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>染色<rt>せんしょく</rt></ruby>
-        <ruby>体<rt>たい</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>chromosome /ˈkroʊ məˌsoʊm/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>ミトコンドリア</td>
-    <td></td>
-    <td></td>
-    <td>mitochondria /ˌmaɪ təˈkɒn dri ə/</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>リボソーム</td>
-    <td></td>
-    <td></td>
-    <td>ribosome /ˈraɪ bəˌsoʊm/</td>
+    <td colspan="2">virus /ˈvaɪ rəs/</td>
 </tr>
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby><rt></rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">cell membrane /ˈmɛm breɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>受容<rt>じゅよう</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">receptor</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">インスリン</td>
+    <td></td>
+    <td colspan="2">insulin /ˈɪn sə lɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">グルコース</td>
+    <td></td>
+    <td colspan="2">glucose /ˈglu koʊs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>血糖<rt>けっとう</rt></ruby>
+        <ruby>値<rt>ち</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">blood sugar level</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>質<rt>しつ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">cytoplasm /ˈsaɪ təˌplæz əm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>核<rt>かく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">nucleus /ˈnu kli əs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>遺伝<rt>いでん</rt></ruby>
+        <ruby>物質<rt>ぶっしつ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">genetic material</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>遺伝<rt>いでん</rt></ruby>
+        <ruby>子<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">gene /dʒin/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>染色<rt>せんしょく</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">chromosome /ˈkroʊ məˌsoʊm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">ミトコンドリア</td>
+    <td></td>
+    <td colspan="2">mitochondria /ˌmaɪ təˈkɒn dri ə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">リボソーム</td>
+    <td></td>
+    <td colspan="2">ribosome /ˈraɪ bəˌsoʊm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>組織<rt>そしき</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">tissue</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>臓器<rt>ぞうき</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">organ</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>器官<rt>きかん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">organ</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>器官<rt>きかん</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">organ system</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -354,6 +327,38 @@
     </td>
     <td colspan="3">The brain and nervous system</td>
 </tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脳<rt>のう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">brain</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脊髄<rt>せきずい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">spinal cord /ˈspaɪn l/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脊椎<rt>せきつい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">spine /spaɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>神経<rt>しんけい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">nerve /nɜrv/</td>
+</tr>
 
 <!-------------------------------------------------------->
 <tr>
@@ -363,7 +368,58 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.4.)
     </td>
-    <td colspan="3">The circulatory system</td>
+    <td colspan="3">circulatory system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>循環<rt>じゅんかん</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">cardiovascular system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>心臓<rt>しんぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">heart</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>血管<rt>けっかん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">blood vessel</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>動脈<rt>どうみゃく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">artery /ˈɑr tə ri/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>静脈<rt>じょうみゃく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">vein</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>毛細<rt>もうさい</rt></ruby>
+        <ruby>血管<rt>けっかん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">capillaries /ˈkæp əˌlɛr iz/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -374,7 +430,32 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.5.)
     </td>
-    <td colspan="3">The respiratory system</td>
+    <td colspan="3">respiratory system /ˈrɛs pər əˌtɔr i/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>気管<rt>きかん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">trachea /ˈtreɪ ki ə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>気管<rt>きかん</rt></ruby>
+        <ruby>支<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">bronchus /ˈbrɒŋ kəs/, bronchi /ˈbrɒŋ ki/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>肺<rt>はい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">lung</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -385,7 +466,17 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.6.)
     </td>
-    <td colspan="3">The digestive system</td>
+    <td colspan="3">digestive system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>消化<rt>しょうか</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">gastrointestinal system /ˌgæs troʊ ɪnˈtɛs tə nl/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -429,7 +520,23 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.10.)
     </td>
-    <td colspan="3">The musculoskeletal system</td>
+    <td colspan="3">musculoskeletal system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>背骨<rt>せぼね</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">backbone</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脊柱<rt>せきちゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">spinal column</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -449,7 +556,57 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.12.)
     </td>
-    <td colspan="3">The otorhinolaryngologic system</td>
+    <td colspan="3">otorhinolaryngologic system /ˌoʊ toʊˌraɪ noʊ ləˌrɪŋ gəˈlɒdʒ ɪ kəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>耳<rt>みみ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">ear</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>鼻<rt>はな</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">nose</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>喉<rt>のど</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">throat</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>咽頭<rt>いんとう</rt></ruby>
+        (<ruby>飲食<rt>いんしょく</rt></ruby>)
+    </td>
+    <td></td>
+    <td colspan="2">pharynx /ˈfær ɪŋks/ (eat and drink)</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>喉頭<rt>こうとう</rt></ruby>
+        (<ruby>呼吸<rt>こきゅう</rt></ruby>)
+    </td>
+    <td></td>
+    <td colspan="2">larynx /ˈlær ɪŋks/ (breath)</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>声帯<rt>せいたい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">vocal cords</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -503,7 +660,15 @@
         <ruby>領域<rt>りょういき</rt></ruby>
         (5.1.20.)
     </td>
-    <td colspan="3">The oral cavity region</td>
+    <td colspan="3">oral cavity region</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>口<rt>くち</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">mouth</td>
 </tr>
 
 <!-------------------------------------------------------->
