ipa of microbiome

--- a/msd_body.html
+++ b/msd_body.html
@@ -179,7 +179,7 @@
     <td></td>
     <td colspan="2">マイクロバイオーム</td>
     <td></td>
-    <td colspan="2">microbiome</td>
+    <td colspan="2">microbiome /ˌmaɪ kroʊˈbaɪ oʊm/</td>
 </tr>
 <tr>
     <td></td>
