--- a/msd_body.html
+++ b/msd_body.html
@@ -478,6 +478,95 @@
     <td></td>
     <td colspan="2">gastrointestinal system /ˌgæs troʊ ɪnˈtɛs tə nl/</td>
 </tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>食道<rt>しょくどう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">esophagus /ɪˈsɒf ə gəs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>胃<rt>い</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">stomach</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>十二指<rt>じゅうにし</rt></ruby>
+        <ruby>腸<rt>ちょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>小腸<rt>しょうちょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">small intestine /ɪnˈtɛs tɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>大腸<rt>だいちょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">large intestine</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>直腸<rt>ちょくちょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">rectum /ˈrɛk təm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>肛門<rt>こうもん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">anus</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>肝臓<rt>かんぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">liver</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>胆嚢<rt>たんのう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">gallbladder /ˈgɔlˌblæd ər/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>膵臓<rt>すいぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">pancreas /ˈpæn kri əs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>虫垂<rt>ちゅうすい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">appendix</td>
+</tr>
 
 <!-------------------------------------------------------->
 <tr>
@@ -488,7 +577,103 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.7.)
     </td>
-    <td colspan="3">The metabolic and endocrine system</td>
+    <td colspan="3">metabolic and endocrine system /ˈɛn də krɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        ホルモン
+    </td>
+    <td></td>
+    <td colspan="2">hormone /ˈhɔr moʊn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        インスリン
+    </td>
+    <td></td>
+    <td colspan="2">insulin /ˈɪn sə lɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        アドレナリン
+    </td>
+    <td></td>
+    <td colspan="2">adrenaline /əˈdrɛn l ɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>甲状<rt>こうじょう</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">thyroid gland /ˈθaɪ rɔɪd/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>副<rt>ふく</rt></ruby>
+        <ruby>甲状<rt>こうじょう</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">parathyroid gland /ˌpær əˈθaɪ rɔɪd/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>副<rt>ふく</rt></ruby>
+        <ruby>腎<rt>じん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">adrenal glands /əˈdrin l/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>副腎<rt>ふくじん</rt></ruby>
+        <ruby>皮質<rt>ひしつ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">accessory cortex</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脳<rt>のう</rt></ruby>
+        <ruby>下垂<rt>かすい</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">pituitary gland /pɪˈtu ɪˌtɛr i/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>松果<rt>しょうか</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">pineal gland /ˈpɪn i əl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>卵巣<rt>らんそう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">ovary /ˈoʊ və ri/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>精巣<rt>せいそう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">testis /ˈtɛs tɪs/, testes /ˈtɛs tiz/</td>
 </tr>
 
 <!-------------------------------------------------------->
