--- a/msd_body.html
+++ b/msd_body.html
@@ -383,7 +383,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>心臓<rt>しんぞう</rt></ruby>
+        <ruby>心<rt>しん</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">heart</td>
@@ -506,7 +507,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>小腸<rt>しょうちょう</rt></ruby>
+        <ruby>小<rt>しょう</rt></ruby>
+        <ruby>腸<rt>ちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">small intestine /ɪnˈtɛs tɪn/</td>
@@ -514,7 +516,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>大腸<rt>だいちょう</rt></ruby>
+        <ruby>大<rt>だい</rt></ruby>
+        <ruby>腸<rt>ちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">large intestine</td>
@@ -522,7 +525,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>直腸<rt>ちょくちょう</rt></ruby>
+        <ruby>直<rt>ちょく</rt></ruby>
+        <ruby>腸<rt>ちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">rectum /ˈrɛk təm/</td>
@@ -538,7 +542,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>肝臓<rt>かんぞう</rt></ruby>
+        <ruby>肝<rt>かん</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">liver</td>
@@ -554,7 +559,8 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>膵臓<rt>すいぞう</rt></ruby>
+        <ruby>膵<rt>すい</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">pancreas /ˈpæn kri əs/</td>
@@ -629,7 +635,7 @@
         <ruby>腎<rt>じん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">adrenal glands /əˈdrin l/</td>
+    <td colspan="2">adrenal gland /əˈdrin l/</td>
 </tr>
 <tr>
     <td></td>
@@ -685,6 +691,71 @@
         (5.1.8.)
     </td>
     <td colspan="3">Blood and hematopoietic tissue</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>赤<rt>せっ</rt></ruby>
+        <ruby>血<rt>けっ</rt></ruby>
+        <ruby>球<rt>きゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">red blood cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>白<rt>はっ</rt></ruby>
+        <ruby>血<rt>けっ</rt></ruby>
+        <ruby>球<rt>きゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">white blood cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>血<rt>けっ</rt></ruby>
+        <ruby>小板<rt>しょうばん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">blood platelet /ˈpleɪt lɪt/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>血<rt>けっ</rt></ruby>
+        <ruby>漿<rt>しょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">plasma /ˈplæz mə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>骨<rt>こつ</rt></ruby>
+        <ruby>髄<rt>ずい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">bone marrow</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脾<rt>ひ</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">spleen</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">thymus /ˈθaɪ məs/</td>
 </tr>
 
 <!-------------------------------------------------------->
