from genitourinary to urinal system

--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -1410,7 +1410,7 @@
     <td></td>
     <td></td>
     <td>
-        The genitourinary system — functions and diseases
+        The urinary system — functions and diseases
     </td>
 </tr>
 <tr>
