--- a/msd_body.html
+++ b/msd_body.html
@@ -665,22 +665,6 @@
     <td></td>
     <td colspan="2">pineal gland /ˈpɪn i əl/</td>
 </tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>卵巣<rt>らんそう</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">ovary /ˈoʊ və ri/</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>精巣<rt>せいそう</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">testis /ˈtɛs tɪs/, testes /ˈtɛs tiz/</td>
-</tr>
 
 <!-------------------------------------------------------->
 <tr>
@@ -781,18 +765,62 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>背骨<rt>せぼね</rt></ruby>
+        <ruby>筋肉<rt>きんにく</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">backbone</td>
+    <td colspan="2">muscle</td>
 </tr>
 <tr>
     <td></td>
     <td colspan="2">
+        <ruby>腱<rt>けん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">tendon /ˈtɛn dən/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>靱帯<rt>じんたい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">ligament /ˈlɪg ə mənt/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>骨<rt>ほね</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">bone</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>背骨<rt>せぼね</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>backbone</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>脊柱<rt>せきちゅう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">spinal column</td>
+    <td></td>
+    <td>spinal column</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>関節<rt>かんせつ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">joint</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -802,6 +830,14 @@
         (5.1.11.)
     </td>
     <td colspan="3">The skin</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>脂肪<rt>しぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">fat</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -873,7 +909,7 @@
         <ruby>器<rt>き</rt></ruby>
         (5.1.13.)
     </td>
-    <td colspan="3">The eye and adnexa</td>
+    <td colspan="3">eye and adnexa</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -885,19 +921,138 @@
         <ruby>系<rt>けい</rt></ruby>
         (5.1.14.)
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">urinary system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>腎<rt>じん</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">kidney</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>尿管<rt>にょうかん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">ureter /yʊˈri tər/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>膀胱<rt>ぼうこう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">bladder /ˈblæd ər/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>尿道<rt>にょうどう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">urethra /yʊˈri θrə/</td>
 </tr>
 
 <!-------------------------------------------------------->
 <tr>
     <td colspan="3">
-        <ruby>女性<rt>じょせい</rt></ruby>
         <ruby>生殖<rt>せいしょく</rt></ruby>
         <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>
         (5.1.15.)
     </td>
-    <td colspan="3">The female genital system</td>
+    <td colspan="3">genital system</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>陰茎<rt>いんけい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">penis</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>前立<rt>ぜんりつ</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">prostate gland</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>精<rt>せい</rt></ruby>
+        <ruby>嚢<rt>そう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">seminal vesicle /ˈvɛs ɪ kəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>精<rt>せい</rt></ruby>
+        <ruby>管<rt>かん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">vas deferens /ˈvæs ˈdɛf əˌrɛnz/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>精<rt>せい</rt></ruby>
+        <ruby>巣<rt>そう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">testis /ˈtɛs tɪs/, testes /ˈtɛs tiz/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>膣<rt>ちつ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">vagina /vəˈdʒaɪ nə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>子宮<rt>しきゅう</rt></ruby>
+        <ruby>頸部<rt>けいぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">cervix /ˈsɜr vɪks/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>子宮<rt>しきゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">uterus /ˈyu tər əs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>卵<rt>らん</rt></ruby>
+        <ruby>管<rt>かん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">fallopian tube /fəˈloʊ pi ən/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>卵<rt>らん</rt></ruby>
+        <ruby>巣<rt>そう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">ovary /ˈoʊ və ri/</td>
 </tr>
 
 <!-------------------------------------------------------->
