msd done, yet body parts

--- a/msd_body.html
+++ b/msd_body.html
@@ -1061,7 +1061,43 @@
         <ruby>乳房<rt>にゅうぼう</rt></ruby>
         (5.1.16.)
     </td>
-    <td colspan="3">The breast</td>
+    <td colspan="3">breast</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>乳<rt>ち</rt></ruby>
+        <ruby>房<rt>ぶさ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">breast</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>乳<rt>ち</rt></ruby>
+        <ruby>首<rt>くび</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">nipple</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>乳<rt>にゅう</rt></ruby>
+        <ruby>輪<rt>りん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">areola /əˈri ə lə/, areolae /əˈri əˌli/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>乳<rt>にゅう</rt></ruby>
+        <ruby>線<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">mammary gland</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -1080,6 +1116,56 @@
     </td>
     <td></td>
     <td colspan="2">mouth</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>唇<rt>くちびる</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">lip</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>顎<rt>あご</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">jaw</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>上<rt>うわ</rt></ruby>
+        <ruby>顎<rt>あご</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">the roof of one's mouth</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>歯<rt>は</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">tooth, teeth</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>犬<rt>けん</rt></ruby>
+        <ruby>歯<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">canine tooth /ˈkeɪ naɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>舌<rt>した</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">tongue</td>
 </tr>
 
 <!-------------------------------------------------------->
