--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -20,6 +20,16 @@
     </style>
 </head>
 <body>
+<p>References:</p>
+<ul>
+    <li><a href="https://courses.lumenlearning.com/suny-ap1/chapter/anatomical-terminology/">
+        Regions of the human body
+    </a></li>
+    <li><a href="https://www.msdmanuals.com/home/fundamentals/the-human-body">
+        MSD Manual: The human body
+    </a></li>
+</ul>
+
 
 <table>
 <tr>
@@ -29,6 +39,245 @@
     </th>
     <th colspan="3">Body structure</th>
 </tr>
+
+<!-------------------------------------------------------->
+<tr>
+    <td colspan="3">
+        <ruby>人体<rt>じんたい</rt></ruby>の
+        <ruby>部位<rt>ぶい</rt></ruby>
+    </td>
+    <td colspan="3">Regions of the human body</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>頭<rt>あたま</rt></ruby>、
+        <ruby>頭<rt>とう</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">head</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>顔<rt>かお</rt></ruby>、
+        <ruby>顔面<rt>がんめん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>face</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>額<rt>ひたい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>forehead</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>目<rt>め</rt></ruby>、
+        <ruby>眼<rt>め</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>eye</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>耳<rt>みみ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>ear</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>鼻<rt>はな</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>nose</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>口<rt>くち</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>mouth</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>唇<rt>くちびる</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>lip</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>顎<rt>あご</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>jaw</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>顎<rt>あご</rt></ruby>の
+        <ruby>先<rt>さき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>chin</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>首<rt>くび</rt></ruby>、
+        <ruby>頸<rt>けい</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>neck</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>胴体<rt>どうたい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">trunk</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>胸<rt>むね</rt></ruby>、
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>chest</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腹<rt>はら</rt></ruby>、
+        <ruby>腹<rt>ふく</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>belly, abdomen /ˈæb də mən/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>臍<rt>へそ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>navel /ˈneɪ vəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>股間<rt>こかん</rt></ruby>、
+        <ruby>鼠径<rt></rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>groin /grɔɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>背中<rt>せなか</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>back</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腰<rt>こし</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>loin /loin/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>尻<rt>しり</rt></ruby>
+        <ruby>臀<rt>でん</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>buttock /ˈbʌt ək/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>上<rt>じょう</rt></ruby>
+        <ruby>肢<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">upper limb /lɪm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>下<rt>か</rt></ruby>
+        <ruby>肢<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">lower limb</td>
+</tr>
+
 <!-------------------------------------------------------->
 <tr>
     <td colspan="3">
@@ -853,22 +1102,6 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>耳<rt>みみ</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">ear</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>鼻<rt>はな</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">nose</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
         <ruby>喉<rt>のど</rt></ruby>
     </td>
     <td></td>
@@ -1112,30 +1345,6 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>口<rt>くち</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">mouth</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>唇<rt>くちびる</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">lip</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>顎<rt>あご</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">jaw</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
         <ruby>上<rt>うわ</rt></ruby>
         <ruby>顎<rt>あご</rt></ruby>
     </td>
@@ -1145,10 +1354,36 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>歯<rt>は</rt></ruby>
+        <ruby>舌<rt>した</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">tooth, teeth</td>
+    <td colspan="2">tongue</td>
+</tr>
+
+<!-------------------------------------------------------->
+<tr>
+    <td colspan="3">
+        <ruby>歯<rt>は</rt></ruby>
+    </td>
+    <td colspan="3">tooth, teeth</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>前<rt>まえ</rt></ruby>
+        <ruby>歯<rt>ば</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">front tooth</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>奥<rt>おく</rt></ruby>
+        <ruby>歯<rt>ば</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">back tooth</td>
 </tr>
 <tr>
     <td></td>
@@ -1158,14 +1393,6 @@
     </td>
     <td></td>
     <td colspan="2">canine tooth /ˈkeɪ naɪn/</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>舌<rt>した</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">tongue</td>
 </tr>
 
 <!-------------------------------------------------------->
