--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -62,12 +62,35 @@
     <td></td>
     <td></td>
     <td>
+        <ruby>顔<rt>とう</rt></ruby>
+        <ruby>髪<rt>はつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hair (head)</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>顔<rt>かお</rt></ruby>、
         <ruby>顔面<rt>がんめん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>face</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>後<rt>こう</rt></ruby>
+        <ruby>顔<rt>とう</rt></ruby>
+        <ruby>部<rt>ぶ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>the back of the head</td>
 </tr>
 <tr>
     <td></td>
@@ -175,6 +198,38 @@
     <td></td>
     <td></td>
     <td>
+        <ruby>体<rt>たい</rt></ruby>
+        <ruby>毛<rt>もう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hair (body)</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肩<rt>かた</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>shoulder</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>脇<rt>わき</rt></ruby>、
+        <ruby>腋<rt>わき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>armpit</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>胸<rt>むね</rt></ruby>、
         <ruby>胸<rt>きょう</rt></ruby>
         <ruby>部<rt>ぶ</rt></ruby>
@@ -210,7 +265,7 @@
     <td></td>
     <td>
         <ruby>股間<rt>こかん</rt></ruby>、
-        <ruby>鼠径<rt></rt></ruby>
+        <ruby>鼠径<rt>そけい</rt></ruby>
         <ruby>部<rt>ぶ</rt></ruby>
     </td>
     <td></td>
@@ -241,7 +296,7 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>尻<rt>しり</rt></ruby>
+        <ruby>尻<rt>しり</rt></ruby>、
         <ruby>臀<rt>でん</rt></ruby>
         <ruby>部<rt>ぶ</rt></ruby>
     </td>
@@ -252,30 +307,268 @@
 <tr>
     <td></td>
     <td colspan="2">
+        <ruby>腕<rt>うで</rt></ruby>、
         <ruby>上<rt>じょう</rt></ruby>
         <ruby>肢<rt>し</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">upper limb /lɪm/</td>
+    <td colspan="2">arm, upper limb /lɪm/</td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
+        <ruby>上<rt>じょう</rt></ruby>
+        <ruby>腕<rt>わん</rt></ruby>
     </td>
     <td></td>
     <td></td>
+    <td>arm (from the shoulder to the elbow)</td>
+</tr>
+<tr>
     <td></td>
+    <td></td>
+    <td>
+        <ruby>肘<rt>ひじ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>elbow</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>前<rt>ぜん</rt></ruby>
+        <ruby>腕<rt>わん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>forearm</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>手<rt>て</rt></ruby>
+        <ruby>首<rt>くび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>wrist</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>手<rt>て</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hand</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>手<rt>て</rt></ruby>の
+        ひら
+    </td>
+    <td></td>
+    <td></td>
+    <td>palm</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>finger</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>爪<rt>つめ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>nail</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>親<rt>おや</rt></ruby>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>thumb</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>人差<rt>ひとさし</rt></ruby>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>index finger</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>中<rt>なか</rt></ruby>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>middle finger</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>薬<rt>くすり</rt></ruby>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>ring finger</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>子<rt>こ</rt></ruby>
+        <ruby>指<rt>ゆび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>little finger</td>
 </tr>
 <tr>
     <td></td>
     <td colspan="2">
+        <ruby>足<rt>あし</rt></ruby>、
         <ruby>下<rt>か</rt></ruby>
         <ruby>肢<rt>し</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">lower limb</td>
+    <td colspan="2">leg, lower limb</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        もも、
+        <ruby>大<rt>だい</rt></ruby>
+        <ruby>腿<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>thigh /θaɪ/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>膝<rt>ひざ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>knee</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>脛<rt>すね</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>shin</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        ふくらはぎ、
+        <ruby>腓<rt>こむら</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>calf /kæf/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>足<rt>あし</rt></ruby>
+        <ruby>首<rt>くび</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>ankle</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>足<rt>あし</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>foot</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>爪<rt>つま</rt></ruby>
+        <ruby>先<rt>さき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>toe</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>踵<rt>かかと</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>heel</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>足<rt>あし</rt></ruby>
+        <ruby>底<rt>ぞこ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>sole</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>土<rt>つち</rt></ruby>
+        <ruby>踏<rt>ふ</rt></ruby>まず
+    </td>
+    <td></td>
+    <td></td>
+    <td>arch /ɑrtʃ/</td>
 </tr>
 
 <!-------------------------------------------------------->
