--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -28,6 +28,9 @@
     <li><a href="https://www.msdmanuals.com/home/fundamentals/the-human-body">
         MSD Manual: The human body
     </a></li>
+    <li><a href="https://training.seer.cancer.gov/anatomy/skeletal/divisions/">
+        Divisions of the Skeleton, SEER Training Models, National Cancer Institute
+    </a></li>
 </ul>
 
 
@@ -57,17 +60,6 @@
     </td>
     <td></td>
     <td colspan="2">head</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>顔<rt>とう</rt></ruby>
-        <ruby>髪<rt>はつ</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>hair (head)</td>
 </tr>
 <tr>
     <td></td>
@@ -178,6 +170,16 @@
     <td></td>
     <td></td>
     <td>
+        <ruby>喉<rt>のど</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>throat</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>首<rt>くび</rt></ruby>、
         <ruby>頸<rt>けい</rt></ruby>
         <ruby>部<rt>ぶ</rt></ruby>
@@ -193,17 +195,6 @@
     </td>
     <td></td>
     <td colspan="2">trunk</td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>体<rt>たい</rt></ruby>
-        <ruby>毛<rt>もう</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>hair (body)</td>
 </tr>
 <tr>
     <td></td>
@@ -323,7 +314,7 @@
     </td>
     <td></td>
     <td></td>
-    <td>arm (from the shoulder to the elbow)</td>
+    <td>upper arm</td>
 </tr>
 <tr>
     <td></td>
@@ -467,9 +458,7 @@
     <td></td>
     <td></td>
     <td>
-        もも、
-        <ruby>大<rt>だい</rt></ruby>
-        <ruby>腿<rt>たい</rt></ruby>
+        <ruby>腿<rt>もも</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -705,7 +694,7 @@
         <ruby>類<rt>るい</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">fungus /ˈfʌŋ gəs/, fungi /ˈfʌn dʒaɪ/</td>
+    <td colspan="2">fungus /ˈfʌŋ gəs/, (pl) fungi /ˈfʌn dʒaɪ/</td>
 </tr>
 <tr>
     <td></td>
@@ -978,7 +967,17 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>気管<rt>きかん</rt></ruby>
+        <ruby>気<rt>き</rt></ruby>
+        <ruby>道<rt>どう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">airway</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>気<rt>き</rt></ruby>
+        <ruby>管<rt>かん</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">trachea /ˈtreɪ ki ə/</td>
@@ -990,7 +989,7 @@
         <ruby>支<rt>し</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">bronchus /ˈbrɒŋ kəs/, bronchi /ˈbrɒŋ ki/</td>
+    <td colspan="2">bronchus /ˈbrɒŋ kəs/, (pl) bronchi /ˈbrɒŋ ki/</td>
 </tr>
 <tr>
     <td></td>
@@ -999,6 +998,15 @@
     </td>
     <td></td>
     <td colspan="2">lung</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>横<rt>おう</rt></ruby>
+        <ruby>隔膜<rt>かくまく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">diaphragm /ˈdaɪ əˌfræm/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -1044,13 +1052,12 @@
         <ruby>腸<rt>ちょう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">duodenum /ˌdu əˈdi nəm/</td>
 </tr>
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>小<rt>しょう</rt></ruby>
-        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>小腸<rt>しょうちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">small intestine /ɪnˈtɛs tɪn/</td>
@@ -1058,8 +1065,7 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>大<rt>だい</rt></ruby>
-        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>大腸<rt>だいちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">large intestine</td>
@@ -1067,8 +1073,7 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>直<rt>ちょく</rt></ruby>
-        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>直腸<rt>ちょくちょう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">rectum /ˈrɛk təm/</td>
@@ -1093,10 +1098,20 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>胆嚢<rt>たんのう</rt></ruby>
+        <ruby>胆<rt>たん</rt></ruby>
+        <ruby>嚢<rt>のう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">gallbladder /ˈgɔlˌblæd ər/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>胆<rt>たん</rt></ruby>
+        <ruby>管<rt>かん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">biliary tract</td>
 </tr>
 <tr>
     <td></td>
@@ -1340,21 +1355,167 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>背骨<rt>せぼね</rt></ruby>
+        <ruby>頭蓋<rt>ずがい</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
     </td>
     <td></td>
     <td></td>
-    <td>backbone</td>
+    <td>skull /skʌl/</td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby>脊柱<rt>せきちゅう</rt></ruby>
+        <ruby>下顎<rt>したあご</rt></ruby>の
+        <ruby>骨<rt>ほね</rt></ruby>
     </td>
     <td></td>
     <td></td>
-    <td>spinal column</td>
+    <td>lower jaw bone</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>背<rt>せ</rt></ruby>
+        <ruby>骨<rt>ぼね</rt></ruby>、
+        <ruby>脊<rt>せき</rt></ruby>
+        <ruby>椎<rt>つい</rt></ruby>、
+        <ruby>脊<rt>せき</rt></ruby>
+        <ruby>柱<rt>ちゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>backbone, spine, spinal column</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>首<rt>くび</rt></ruby>の
+        <ruby>骨<rt>ほね</rt></ruby>、
+        <ruby>頸<rt>けい</rt></ruby>
+        <ruby>椎<rt>つい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>neck bone, cervical vertebrae /ˈvɜr təˌbri/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腰<rt>こし</rt></ruby>の
+        <ruby>骨<rt>ほね</rt></ruby>、
+        <ruby>腰<rt>よう</rt></ruby>
+        <ruby>椎<rt>つい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>lumbar vertebrae</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>仙<rt>せん</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>sacrum /ˈsæk rəm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>尾<rt>び</rt></ruby>
+        <ruby>骶<rt>てい</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>、
+        <ruby>尾<rt>び</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>coccyx /ˈkɒk sɪks/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>鎖<rt>さ</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>clavicle /ˈklæv ɪ kəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肩甲<rt>けんこう</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>scapula /ˈskæp yə lə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>sternum</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肋骨<rt>あばらぼね</rt></ruby>、
+        <ruby>肋<rt>ろっ</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>rib</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>骨<rt>こつ</rt></ruby>
+        <ruby>盤<rt>ばん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>pelvis /ˈpɛl vɪs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>恥<rt>ち</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>pubis /ˈpyu bɪs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>大腿<rt>だいたい</rt></ruby>
+        <ruby>骨<rt>こつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>thighbone</td>
 </tr>
 <tr>
     <td></td>
@@ -1364,6 +1525,60 @@
     <td></td>
     <td colspan="2">joint</td>
 </tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>椎間板<rt>ついかんばん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>intervertebral disk /ˌɪn tərˈvɜr tə brəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肩<rt>かた</rt></ruby>
+        <ruby>関節<rt>かんせつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>shoulder joint</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肘<rt>ひじ</rt></ruby>
+        <ruby>関節<rt>かんせつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>elbow joint</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>股<rt>こ</rt></ruby>
+        <ruby>関節<rt>かんせつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hip joint</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>膝<rt>ひざ</rt></ruby>
+        <ruby>関節<rt>かんせつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>knee joint</td>
+</tr>
 
 <!-------------------------------------------------------->
 <tr>
@@ -1372,6 +1587,28 @@
         (5.1.11.)
     </td>
     <td colspan="3">The skin</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>顔<rt>とう</rt></ruby>
+        <ruby>髪<rt>はつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hair (head)</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>体<rt>たい</rt></ruby>
+        <ruby>毛<rt>もう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>hair (body)</td>
 </tr>
 <tr>
     <td></td>
